--- a/static/css/sb-admin-2.css
+++ b/static/css/sb-admin-2.css
@@ -3633,14 +3633,14 @@ input[type="button"].btn-block {
   margin-bottom: 0;
 }
 
-.custom-file-input {
-  position: relative;
-  z-index: 2;
-  width: 100%;
-  height: calc(1.5em + 0.75rem + 2px);
-  margin: 0;
-  opacity: 0;
-}
+/*.custom-file-input {*/
+/*  position: relative;*/
+/*  z-index: 2;*/
+/*  width: 100%;*/
+/*  height: calc(1.5em + 0.75rem + 2px);*/
+/*  margin: 0;*/
+/*  opacity: 0;*/
+/*}*/
 
 .custom-file-input:focus ~ .custom-file-label {
   border-color: #bac8f3;
